--- a/doc/doxygen-custom/MainPage.dox
+++ b/doc/doxygen-custom/MainPage.dox
@@ -1,5 +1,5 @@
 /**
  * @mainpage 
- * @image html libdpf-wordmark.png
+ * @image html libdpf-wordmark2.png
  * Documentation you want to occur on the main page.
   */
